--- a/simulator.html
+++ b/simulator.html
@@ -85,7 +85,7 @@
 
     <div class="max-w-7xl mx-auto bg-white rounded-xl shadow-2xl p-6 md:p-10">
         <h1 class="text-3xl font-extrabold text-gray-900 mb-8 text-center border-b pb-4">
-            Pulse Modulation Simulator (PAM, PWM, PPM)
+            Pulse Modulation Simulator
         </h1>
         
         <!-- Main Layout: Graphs (Left) and Controls (Right) --><div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
