Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   flex items-center justify-center text-white font-bold">PS</div>
       <div>
         <h1 class="text-lg font-semibold">Pulse Simulator</h1>
-        <p class="text-sm text-slate-500">PAM, PWM, PPM & PCM visual simulator</p>
+        <p class="text-sm text-slate-500">PAM, PWM & PPM visual simulator</p>
       </div>
     </div>
     <nav class="flex items-center gap-3">
@@ -46,7 +46,7 @@
         </h2>
 
         <p class="text-slate-600 mb-6">
-          Visualize and experiment with PAM, PWM, PPM and PCM. Adjust amplitude, sampling 
+          Visualize and experiment with PAM, PWM and PPM. Adjust amplitude, sampling 
           frequency, waveform type and see the recovered signal — all in your browser.
         </p>
 
@@ -64,7 +64,7 @@
         </div>
 
         <div class="mt-6 text-sm text-slate-500">
-          <strong>Tip:</strong> Toggle "Demodulation" to view signal recovery. Try PCM mode to see quantization.
+          <strong>Tip:</strong> Toggle "Demodulation" to view signal recovery.
         </div>
       </div>
 
@@ -82,12 +82,12 @@
     <section class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
       <article class="bg-white p-4 rounded-xl shadow-sm">
         <h3 class="font-semibold">Modes</h3>
-        <p class="text-sm text-slate-600 mt-2">Supports PAM, PWM, PPM & PCM modulation.</p>
+        <p class="text-sm text-slate-600 mt-2">Supports PAM, PWM & PPM modulation.</p>
       </article>
 
       <article class="bg-white p-4 rounded-xl shadow-sm">
         <h3 class="font-semibold">Controls</h3>
-        <p class="text-sm text-slate-600 mt-2">Adjust amplitude, sampling, frequency & PCM bits.</p>
+        <p class="text-sm text-slate-600 mt-2">Adjust amplitude, sampling frequency & waveform type.</p>
       </article>
 
       <article class="bg-white p-4 rounded-xl shadow-sm">
@@ -96,7 +96,7 @@
       </article>
     </section>
 
-    <!-- TEAM SECTION (NAME + ROLE FORMAT) -->
+    <!-- TEAM SECTION -->
     <section class="mt-10 bg-white rounded-xl p-6 shadow-sm border border-slate-200">
       <h3 class="text-xl font-semibold text-center mb-6 text-slate-800">Project Team</h3>
 
