Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
 
         <div class="p-4 rounded-lg bg-slate-100 border border-slate-200">
-          <p class="font-semibold text-slate-900">1. Name: __________________________</p>
+          <p class="font-semibold text-slate-900">1. Name: ROHIT 2330211_______</p>
           <p class="text-sm text-slate-600 mt-1">Role: __________________________</p>
         </div>
 
@@ -145,3 +145,4 @@
   </main>
 </body>
 </html>
+
