--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
 
         <div class="p-4 rounded-lg bg-slate-100 border border-slate-200">
-          <p class="font-semibold text-slate-900">1. Name: ROHIT 2330211_______</p>
-          <p class="text-sm text-slate-600 mt-1">Role: __________________________</p>
+          <p class="font-semibold text-slate-900">1. Rohit Singh</p>
+          <p class="text-sm text-slate-600 mt-1">Role: Developer</p>
         </div>
 
         <div class="p-4 rounded-lg bg-slate-100 border border-slate-200">
-          <p class="font-semibold text-slate-900">2. Name: __________________________</p>
-          <p class="text-sm text-slate-600 mt-1">Role: __________________________</p>
+          <p class="font-semibold text-slate-900">2. Roshan</p>
+          <p class="text-sm text-slate-600 mt-1">Role: Contributor</p>
         </div>
 
         <div class="p-4 rounded-lg bg-slate-100 border border-slate-200">
-          <p class="font-semibold text-slate-900">3. Name: __________________________</p>
-          <p class="text-sm text-slate-600 mt-1">Role: __________________________</p>
+          <p class="font-semibold text-slate-900">3. Piyush</p>
+          <p class="text-sm text-slate-600 mt-1">Role: Documentation</p>
         </div>
 
         <div class="p-4 rounded-lg bg-slate-100 border border-slate-200">
-          <p class="font-semibold text-slate-900">4. Name: __________________________</p>
-          <p class="text-sm text-slate-600 mt-1">Role: __________________________</p>
+          <p class="font-semibold text-slate-900">4. Rahul</p>
+          <p class="text-sm text-slate-600 mt-1">Role: Testing</p>
         </div>
 
       </div>
@@ -145,4 +145,3 @@
   </main>
 </body>
 </html>
-
