Revise index.html for project submission and layout
Updated the project title and added new sections including Aim, Team, and Features. Improved styling and structure for better presentation.

--- a/index.html
+++ b/index.html
@@ -3,52 +3,104 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pulse Modulation Simulator — Project</title>
+  <title>Pulse Modulation Simulator — Project Submission</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
-    .hero-card { box-shadow: 0 10px 40px rgba(0,0,0,0.06); }
+    .hero-shadow { box-shadow: 0 10px 30px rgba(15,23,42,0.08); }
+    .btn-xl { padding: .85rem 1.25rem; font-weight:700; border-radius:.6rem; }
+    .border-card { border:1px solid #dbe1ea; }
   </style>
 </head>
 
-<body class="bg-slate-100 text-slate-900">
+<body class="bg-slate-50 text-slate-900">
 
-  <!-- ========================= HEADER ========================= -->
-  <header class="w-full flex flex-col items-center mt-10 mb-6">
-    <div class="bg-white p-6 rounded-2xl border border-slate-200 shadow-md mx-auto text-center w-11/12 md:w-3/4">
-      <h1 class="text-2xl font-bold">Kirori Mal College</h1>
-      <p class="text-slate-600">Department of Physics</p>
-      <p class="text-sm text-slate-500">University of Delhi</p>
-    </div>
+  <!-- HEADER / COLLEGE INFO -->
+  <header class="max-w-4xl mx-auto mt-10 p-6 bg-white rounded-xl shadow-md border border-slate-200 text-center">
+    <h1 class="text-2xl font-bold">Kirori Mal College</h1>
+    <h2 class="text-lg text-slate-700 font-medium">Department of Physics</h2>
+    <p class="mt-1 text-sm text-slate-600">University of Delhi</p>
   </header>
 
-  <!-- ========================= MAIN HERO ========================= -->
-  <main class="w-full flex flex-col items-center">
+  <main class="max-w-4xl mx-auto p-6">
 
-    <div class="bg-white p-8 rounded-2xl border border-slate-200 shadow-md w-11/12 md:w-3/4 hero-card text-center">
-      <h2 class="text-3xl font-bold mb-3">Pulse Modulation Simulator</h2>
-      <p class="text-slate-600 mb-6 text-sm md:text-base">A Web-Based Demonstration of PAM, PWM & PPM</p>
+    <!-- PROJECT TITLE BOX -->
+    <section class="bg-white mt-8 p-6 rounded-xl shadow-md border border-slate-200 text-center hero-shadow">
+      <h2 class="text-3xl font-extrabold text-slate-900">Pulse Modulation Simulator</h2>
+      <p class="text-slate-700 text-lg mt-2">A Web-Based Demonstration of PAM, PWM & PPM</p>
 
-      <a href="simulator.html" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg">
+      <a href="simulator.html" 
+        class="btn-xl bg-indigo-600 text-white hover:bg-indigo-700 inline-block mt-6 text-lg">
         ▶ Open Simulator
       </a>
-    </div>
+    </section>
 
-    <!-- ========================= ABSTRACT ========================= -->
-    <section class="bg-white w-11/12 md:w-3/4 mt-10 p-6 rounded-2xl shadow-md border border-slate-200">
+    <!-- ABSTRACT -->
+    <section class="bg-white mt-8 p-6 rounded-xl shadow-md border border-slate-200">
       <h3 class="text-xl font-semibold mb-2">Abstract</h3>
-      <p class="text-slate-700 leading-relaxed">
-        This project demonstrates Pulse Amplitude Modulation (PAM), Pulse Width Modulation (PWM) and 
-        Pulse Position Modulation (PPM) using an interactive web-based simulator. 
-        Users can vary signal amplitude, sampling frequency and waveform type. 
-        The tool also visualizes demodulation to help students understand the reconstruction of analog signals 
-        from pulse-modulated forms. This simulator provides a modern, browser-based alternative to hardware 
-        communication trainer kits.
+      <p class="text-slate-700 leading-6">
+        This project demonstrates Pulse Amplitude Modulation (PAM), Pulse Width Modulation (PWM)
+        and Pulse Position Modulation (PPM) using an interactive web-based simulator. Users can
+        vary signal amplitude, sampling frequency and waveform type. The tool also visualizes 
+        demodulation to help students understand the reconstruction of analog signals from 
+        pulse-modulated forms. This simulator provides a modern, browser-powered alternative 
+        to hardware communication trainer kits.
       </p>
     </section>
 
-    <!-- ========================= COURSE INFO ========================= -->
-    <section class="bg-white w-11/12 md:w-3/4 mt-6 p-6 rounded-2xl shadow-md border border-slate-200">
+    <!-- AIM -->
+    <section class="bg-white mt-6 p-6 rounded-xl shadow-md border border-slate-200">
+      <h3 class="text-xl font-semibold mb-2">Aim</h3>
+      <p class="text-slate-700 leading-6">
+        To study and visualize Pulse Amplitude Modulation (PAM), Pulse Width Modulation (PWM) 
+        and Pulse Position Modulation (PPM) using a custom-built web-based simulation tool.
+      </p>
+    </section>
+
+    <!-- TEAM SECTION -->
+    <section class="bg-white mt-8 p-6 rounded-xl shadow-md border border-slate-200">
+      <h3 class="text-xl font-semibold text-slate-900 mb-4 text-center">Project Team</h3>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+
+        <div class="p-4 rounded-lg bg-slate-100 border-card">
+          <p class="font-bold text-slate-900">Rohit Singh</p>
+          <p class="text-sm text-slate-600">Role: Developer</p>
+        </div>
+
+        <div class="p-4 rounded-lg bg-slate-100 border-card">
+          <p class="font-bold text-slate-900">Roshan</p>
+          <p class="text-sm text-slate-600">Role: Contributor</p>
+        </div>
+
+        <div class="p-4 rounded-lg bg-slate-100 border-card">
+          <p class="font-bold text-slate-900">Piyush</p>
+          <p class="text-sm text-slate-600">Role: Documentation</p>
+        </div>
+
+        <div class="p-4 rounded-lg bg-slate-100 border-card">
+          <p class="font-bold text-slate-900">Rahul</p>
+          <p class="text-sm text-slate-600">Role: Testing</p>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section class="bg-white mt-8 p-6 rounded-xl shadow-md border border-slate-200">
+      <h3 class="text-xl font-semibold mb-2">Features</h3>
+
+      <ul class="list-disc pl-6 text-slate-700 space-y-1">
+        <li>Visualizes PAM, PWM and PPM in real time.</li>
+        <li>Adjustable amplitude, waveform type, analog frequency and sampling frequency.</li>
+        <li>Demodulation mode to view recovered waveform.</li>
+        <li>Supports sine, square and triangle input waveforms.</li>
+        <li>Fully browser-based — works on phone, laptop and tablet.</li>
+      </ul>
+    </section>
+
+    <!-- COURSE DETAILS -->
+    <section class="bg-white mt-8 p-6 rounded-xl shadow-md border border-slate-200">
       <h3 class="text-xl font-semibold mb-3">Course Information</h3>
 
       <p class="text-slate-700"><strong>Course:</strong> B.Sc (Hons) Physics</p>
@@ -58,22 +110,12 @@
       <p class="text-slate-700"><strong>Academic Year:</strong> 2025–26</p>
     </section>
 
+    <!-- FOOTER -->
+    <footer class="mt-12 mb-8 text-center text-sm text-slate-500">
+      Designed & Developed by Rohit Singh
+    </footer>
+
   </main>
-
-  <!-- ========================= RIGHT SIDE TEAM BOX ========================= -->
-  <div class="hidden md:block fixed right-6 top-40 bg-white shadow-xl border border-slate-200 rounded-xl p-5 w-64">
-    <h3 class="text-lg font-bold text-slate-900 mb-3 text-center">Project Team</h3>
-
-    <p class="font-semibold text-slate-800">• Rohit Singh</p>
-    <p class="font-semibold text-slate-800">• Roshan</p>
-    <p class="font-semibold text-slate-800">• Piyush</p>
-    <p class="font-semibold text-slate-800">• Rahul</p>
-  </div>
-
-  <!-- ========================= FOOTER ========================= -->
-  <footer class="text-center text-slate-500 mt-12 mb-8 text-sm">
-    © 2025 — Pulse Modulation Simulator | Department of Physics, Kirori Mal College
-  </footer>
 
 </body>
 </html>
